samples/_failures_safe/1761127708_67ed94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_557f40e8.c: In function ‘main’:
./samples/SAFE/__tmp_557f40e8.c:165:5: error: expected expression at end of input
  165 |     size_t written = fwrite(output_buffer.data, 1, compressed_size,
      |     ^~~~~~
./samples/SAFE/__tmp_557f40e8.c:165:5: error: expected declaration or statement at end of input
